Add credential revocation support via Token Status List